# retuve-nnunet-plugin

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
retuve_nnunet_plugin/: ultrasound.py  utils.py  xray.py
tests/: test_api.py  test_clis.py  test_main.py
